# Maxsat_logger

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/maxsat_runner/: __init__.py  api.py  cli.py
src/maxsat_runner/analytics/: final_stats.py  segments.py  similarities.py  stats.py
src/maxsat_runner/core/: __init__.py  campaign.py  parser.py  runner.py  types.py
src/maxsat_runner/io/: csvsink.py  logsink.py
src/maxsat_runner/webui/: app.js  index.html
tests/: test_campaign_fake.py  test_parser.py  test_stats.py  test_timeout.py
tests/assets/: fake_solver.py
